XSensor/Peloton-20220817/Peloton-20220817/wrappers/c-sharp/XSCore90.cs


        // ===========================================================================
        //	Calibration file management
        // ===========================================================================

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
        public static extern xbool XS_SetCalibrationFolder(string calibrationFolder);
        // When the DLL is provided with a folder for caching calibration files, it will automatically
        // manage downloading and selection of an appropriate calibration file.
        // While enabled, the other calibration file functions are not enabled.
        //
        // Typically this is the best option for managing calibration files
        //
        // Alternatively you may use the following functions for direct management
        // of a sensor's calibration files:
        // XS_DownloadCalibrations; XS_GetCalibrationName; XS_GetCalibrationInfo; XS_GetCalibrationInfoEx

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
        public static extern uint  XS_DownloadCalibrations(SENSORPID spid, string calibrationFolder);
        // Downloads the calibration files stored on the sensor and saves them to a folder.
        // Returns number of files downloaded. There may be 0, 1 or more calibration files on the sensor.  
        // Usually if there are more then 1, then each file represents a different calibrated pressure range.

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
        public static extern xbool XS_GetCalibrationName(uint nCalIndex, ref uint bufferSize, StringBuilder calName);
        // After calling XS_DownloadCalibrations(), call this function to retrieve the name of the downloaded calibration file.
        // If calName is null, the size of the required buffer (in bytes) is calculated and returned in bufferSize.
        // 'nCalIndex' is a zero based index.
        // NOTE: this function only applies to the XS_DownloadCalibrations() call.  It does not work with XS_AddSensorToConfig_AutoCal().
        /* example C# call
            uint bufferSize = 0;
            XS_GetCalibrationName(nCalIndex, ref bufferSize, null);
            var sb = new StringBuilder((int)bufferSize);
            XS_GetCalibrationName(nCalIndex, ref bufferSize, sb);
            string calFileName = sb.ToString();
         */

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
        public static extern xbool XS_GetCalibrationInfo(string sCalibrationFile, byte nPressureUnits, ref float nMinPressure, ref float nMaxPressure);
        // Scans the calibration file, and returns the maximum pressure (in the provided pressure units - see EPressureUnit)
        // szCalibrationFile is the full path to the cal file on disk.  eg: c:\\CalFiles\\MyCalFile.xsc

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
        public static extern xbool XS_GetCalibrationInfoEx(string sCalibrationFile, ref SENSORPID spid);
        // Retrieve the SENSORPID from this calibration file
        // szCalibrationFile is the full path to the cal file on disk.  eg: c:\\CalFiles\\MyCalFile.xsc


        // ===========================================================================
        //	AUTOMATIC Sensor Configuration
        //
        //	These functions simplify the process of configuring any connected sensors.
        // ===========================================================================

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_AutoConfig(EPressureUnit pressureUnits, float nTargetPressure = -1.0f);
        // creates a configuration using all sensors attached to the system.  Downloads any calibration files into memory and uses them.
        // Please note that while this is the simplest way to configure the sensors, it is also the slowest because the calibration download takes a fair bit of time.
        // pass in nTargetPressure = -1.0f to select the sensor's default calibration range

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
        public static extern xbool XS_AutoConfigXSN(string XSNFullPath, EPressureUnit pressureUnits, float nTargetPressure = -1.0f);
        // Similar to XS_AutoConfig(), but also creates a standalone XSN session file.
        // The szXSNFile path and file name must be fully specified. eg: "c:\MySessions\Test.xsn".


        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_AutoConfigByDefault();
        // Auto-configure using the default settings for the found sensors. Same as XS_AutoConfig(ePRESUNIT_RAW,-1.0f). Added for Python support.

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
        public static extern xbool XS_AutoConfigByDefaultXSN(string XSNFullPath);
        // Auto-configure using the default settings for the found sensors. Same as XS_AutoConfig(ePRESUNIT_RAW,-1.0f). Added for Python support.

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
        public static extern xbool XS_AutoConfig_SingleSensor(string calFileFullPath);

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
        public static extern xbool XS_AutoConfig_SingleSensorXSN(string xsnFileFullPath, string calFileFullPath);
        // Wraps all of the enumeration and configuration into a single call.
        // Optionally provide a path to a calibration file to override any calibration downloads.
        // ie: XS_AutoConfig_SingleSensor(L"d:\\MyCalFiles\\PX100363605_20121022_1151.xsc");
        // This only works if there is a single sensor present.

        // ===========================================================================
        //	MANUAL Sensor Configuration
        //
        //	These functions give better control over the configuration of any connected
        //	sensors.
        // ===========================================================================

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_NewSensorConfig();
        // Prepares the DLL to create a configuration of sensors.  Remove any existing configured sensors.

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
        public static extern xbool XS_NewSensorConfigXSN(string xsnFileFullPath);
        // Similar to XS_NewSensorConfig(), but also creates a standalone XSN session file.
        // The szXSNFile path and file name must be fully specified. eg: "c:\MySessions\Test.xsn".

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
        public static extern xbool XS_AddSensorToConfig(SENSORPID spid, string calFileFullPath);
        // Adds a sensor to the sensor configuration.  Sensors in the configuration are sampled when XS_Sample() is called.
        // A calibration file can be specified here.  If szCalibrationFile is 0, then only raw data is collected.
        // All sensors in the configuration must have calibration files, otherwise only raw values are collected.

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_AddSensorToConfig_AutoCalByDefault(SENSORPID spid);

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_AddSensorToConfig_AutoCal(SENSORPID spid, EPressureUnit nPressureUnits, float nTargetMaxPressure);
        // nTargetMaxPressure - pass in -1.0 to default to the cal file's max pressure
        // Adds a sensor to the sensor configuration.  Sensors in the configuration are sampled when XS_Sample() is called.
        // Attempts to download a calibration file from the sensor and use it.
        // If nPressureUnits is raw, then it uses the first calibration file it finds, otherwise it attempts to match the desired maximum pressure
        // Note: Downloading can be a bit slow.

        // When finished adding sensors to the configuration, call this function to initialize it and prepare for calling XS_OpenConnection()
        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_ConfigComplete();

        // Returns xTRUE if the DLL has a sensor configuration
        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_HasConfig();

        // Closes any open connection and releases the configuration (including any XSN file).
        // Subsequent calls to XS_OpenConnection will fail until a new config is created.
        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_ReleaseConfig();

        // ===========================================================================
        //	Sensor Configuration Information
        // ===========================================================================

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern SENSORPID XS_ConfigSensorPID(uint nConfigIndex);
        // Returns the sensor PRODUCT ID at the indexed location of the configured sensors list.  The index is zero based.
        // Call XS_NewSensorConfig+XS_AddSensorToConfig+XS_ConfigComplete or XS_AutoConfigByDefault() before calling this function.

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern uint XS_ConfigSensorCount();
        // returns the number of configured sensors

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_IsCalibrationConfigured();
        // Returns boolTRUE if the configuration is setup for calibrated data.

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern xbool XS_GetConfigInfo(EPressureUnit pressureUnits, ref float nMinPressure, ref float nMaxPressure);
        // After the configuration is complete, call this to check the pressure range of the sensor.
        // nPressureUnits - the pressure units in which the minimum and maximum pressures are returned. (See EPressureUnits below)
        // If operating in RAW mode (i.e.: no calibration file specified), then nPressureUnits is ignored.

        // ===========================================================================
        //	Other Settings
        // ===========================================================================

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern void XS_SetPressureUnit(EPressureUnit pressureUnits);
        // Sets the calibrated data's pressure units.  This can be changed at any time.
        // The default value is kg/cm^2 (ePRESUNITS_KGCM2).

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern EPressureUnit XS_GetPressureUnit();
        // Returns the current pressure units (see EPressureUnit).

        [DllImport("XSCore90", CallingConvention = CallingConvention.Cdecl)]
        public static extern void XS_SetReadTimeout(uint TimeoutSeconds);
        // Sets the sample function's timeout period in seconds.
        //
        // If the software loses connection to a sensor, it tries to re-open the connection
        // for this length of time.
        //
        // 5 seconds is default
